# playground-clap

./: Cargo.toml
src/: cli.yaml  main.rs
