[package]
name = "playground-clap"
version = "0.1.0"
authors = ["Daigo Shitara <stain.witness+github@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["yaml"] }

[[bin]]
name = "cockpit"
path = "src/main.rs"